--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "player.h": "c",
-        "raylib.h": "c"
+        "raylib.h": "c",
+        "colision.h": "c"
     }
 }
