room.h adicionada e player.h atualizada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "player.h": "c",
         "raylib.h": "c",
-        "colision.h": "c"
+        "colision.h": "c",
+        "stdio.h": "c",
+        "room.h": "c",
+        "stdlib.h": "c"
     }
 }
