--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "stdlib.h": "c",
         "menu.h": "c",
         "animacao.h": "c",
-        "hud.h": "c"
+        "hud.h": "c",
+        "enemies.h": "c"
     }
 }
